= Changelog

This changelog contains major and/or breaking changes to Kakoune between
released versions.

== Kakoune 2020.09.01

* Daemon mode (`-d` switch) does not fork anymore.

== Kakoune 2020.08.04

* Introduce `User` hook support.

* The `bold` and `italic` faces are no longer built-in. Highlighters
  are expected to use face attributes (`+b` and `+i`, respectively) to
  decorate text.

* The `lint-enable` command no longer needs to be called to display
  linting errors. The `lint-disable` command was renamed into
  `lint-hide-diagnostics`.

* The `+<length>` part of a `range-specs` highlighter consistently
  refers to the length of the target range.

* clients stdin is transferred to the server, making it possible
  to pipe into `kak -c <session>`

* Faces can have an alpha channel, specified using the 
  `rgba:RRGGBBAA` format.

* replace-ranges highlighter now support empty and multi-lines ranges

* `%val{...}` now expands to list of strings, `$kak_quoted_...` now work
  as expected with these.

* `*SetOption` hooks filter string will contain a value only for options
  of int/str/bool types to avoid performance issue with generating those
  on more complex option types. 

== Kakoune 2020.01.16

* Expose history tree through `$kak_history` and
  `$kak_uncommitted_modifications`

* `InsertCompletionHide` parameter is the list of inserted
  ranges

== Kakoune 2019.12.10

* Arrow keys and `<home>`, `<end>` are not normal mode commands
  anymore but default key mappings.
  
* `ModeChange` hook parameter now takes `push:` or `pop:` prefix,
  `InsertBegin`, `InsertEnd`, `NormalBegin` and `NormalEnd`
  were removed.

* `-verbatim` switch in `evaluate-commands` for perfect command
  forwarding to another context.

* `WrapMarker` face used by `wrap -marker` highlighter

* `info` supports markup with the `-markup` switch

* `rename-buffer` gained `-file` and `-scratch` switches
  to support converting buffer types.  

== Kakoune 2019.07.01
